--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,18 @@
 
+:root{
+    --col1: #DFF8EB;
+    --col2: #A28F9D;
+    --col3: #74776B;
+    --col4: #5C574F;
+    --col5: #48483A;
+}
+
 .navbar{
-    background: #363636;
+    background: var(--col3);
+    font-weight: 600;
 }
 .nav-link, .navbar-brand{
-    color: #c4c4c4;
+    color: #2c2622;
     cursor: pointer;
     margin-left: 1em;
 }
@@ -11,18 +20,15 @@
     margin: 1em !important;
 }
 .nav-link:hover{
-    background: #505050;
-    color: #8898f0;
+    border-radius: 3px;
+    background: var(--col5);
+    color: var(--col1);
 }
 .navbar-collapse{
     justify-content: flex-end;
 }
 .navbar-toggler{
     background: #FFF !important;
-}
-.active{
-    font-weight: bold;
-    color: #c4c4c4 !important;
 }
 
 .header{
@@ -48,7 +54,8 @@
     padding: 2em;
 }
 .description h1{
-    color: #363636;
+    color: var(--col4);
+    font-weight: 600;
 }
 .description p{
     color: #666;
@@ -57,8 +64,8 @@
     line-height: 1.5;
 }
 .description button{
-    border: 1px solid #363636;
-    background: #363636;
+    border: 1px solid var(--col3);
+    background: var(--col3);
     color: #fff;
 }
 
@@ -66,9 +73,13 @@
     margin: 4em 0;
     padding: 1em;
     position: relative;
+    background-color: #999;
+    width: 80%;
+    margin-inline: auto;
+    border-radius: 8px;
 }
 .about h1{
-    color: #8898f0;
+    color: var(--col5);
     font-weight: 600;
     margin: 2em;
 }
@@ -76,23 +87,24 @@
     height: 100%;
     width: 100%;
     border-radius: 50%;
+    padding-bottom: 1em;
 }
 .about span{
     display: block;
     color: #888;
     position: absolute;
-    left: 115px;
+    left: 30%;
 }
 .about .desc{
     padding: 2em;
-    border-left: 4px solid #8898f0;
+    /* border-left: 4px solid var(--col3); */
 }
 .about .desc h3{
-    color: #8898f0;
+    color: var(--col4);
 }
 .about .desc p{
     line-height: 2;
-    color: #888;
+    color: var(--col4);
 }
 
 .c-item{
@@ -108,6 +120,6 @@
     padding: 1em;
     position: relative;
 }
-.price-item{
-    
+#price-title{
+
 }
